--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^1.8.11",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3"
