--- a/package.json
+++ b/package.json
@@ -50,8 +50,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^30.0.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3"
   }
